apply plugin: 'com.android.library'

ext {
    PUBLISH_GROUP_ID = 'ai.picovoice'
    PUBLISH_VERSION = '4.0.2'
    PUBLISH_ARTIFACT_ID = 'rhino-android'
}

apply plugin: 'maven-publish'
publishing {
    publications {
        release(MavenPublication) {
            groupId = "ai.picovoice"
            artifactId = "rhino-android"
            version = "4.0.1"
            artifact("$buildDir/outputs/aar/rhino-release.aar")
        }
    }
    repositories {
        mavenLocal()
    }
}

android {
    compileSdkVersion defaultTargetSdkVersion

    defaultConfig {
        minSdkVersion 21
        targetSdkVersion defaultTargetSdkVersion
        versionCode 1
        versionName "1.0"

        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

if (file("${rootDir}/publish-mavencentral.gradle").exists()) {
    apply from: "${rootDir}/publish-mavencentral.gradle"
}

dependencies {
    implementation "ai.picovoice:android-voice-processor:1.0.2"
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'org.yaml:snakeyaml:2.6'
}

task copyLibs(type: Copy) {
    from("${rootDir}/../../../lib/android")
    into("${rootDir}/rhino/src/main/jniLibs")
}

task copyParams(type: Copy) {
    from("${rootDir}/../../../lib/common")
    include('rhino_params.pv')
    into("${rootDir}/rhino/src/main/res/raw")
}

preBuild.dependsOn(copyLibs)
preBuild.dependsOn(copyParams)
